# api

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Makefile.toml  README.md  run.sh
.github/scripts/: build-and-push.sh
.github/workflows/: cd.yaml
contract/: Cargo.toml  build.sh
contract/src/: lib.rs
docker/: docker-compose.yml
docker/grafana/: .env.grafana
docker/graphql/: Dockerfile
docker/indexer/: Dockerfile
docker/nginx/: nginx-http.conf  nginx.conf
entity/: Cargo.toml
entity/src/: account.rs  asset.rs  chain_state.rs  draw.rs  lib.rs  lottery.rs  prize.rs  ticket.rs  transaction_log.rs  transaction_log_side_effect.rs
graphql/: Cargo.toml
graphql/src/: lib.rs  routes.rs  schema.rs  server.rs
graphql/src/guards/: auth.rs
graphql/src/helpers/: jwt.rs
graphql/src/loaders/: account.rs  asset.rs  mod.rs
graphql/src/objects/: mod.rs
graphql/src/objects/account/: inputs.rs  mod.rs
graphql/src/objects/account/types/: account.rs  auth.rs
graphql/src/objects/asset/: mod.rs
graphql/src/objects/asset/types/: asset.rs
graphql/src/objects/common/: inputs.rs  mod.rs  types.rs
graphql/src/objects/image/: mod.rs
graphql/src/objects/lottery/: inputs.rs  mod.rs  tickets.rs
graphql/src/objects/lottery/types/: draw.rs  lottery.rs  mod.rs  prize.rs  ticket.rs
graphql/src/objects/system/: mod.rs
graphql/src/objects/twitter/: mod.rs
indexer/: Cargo.toml
indexer/src/: events.rs  handler.rs  lib.rs  stream.rs
indexer/src/chain/: mod.rs  subscription.rs  transformer.rs  validator.rs
indexer/src/handlers/: fee_collected.rs  lottery_canceled.rs  lottery_closed.rs  lottery_number_generated.rs  lottery_opened.rs  mod.rs  ticket_bought.rs  winner_paid.rs
indexer/src/state/: mod.rs
lib/: Cargo.toml
lib/src/: error.rs  time.rs
migrations/: 20240101000000_init.up.sql  20250226110101_create_assets.up.sql  20250226110102_featured.up.sql
scripts/: entry.sh  release.sh
service/: Cargo.toml
service/src/: lib.rs  prelude.rs  services.rs
service/src/account/: consts.rs  mod.rs  store.rs  types.rs
service/src/asset/: store.rs
service/src/cache/: service.rs
service/src/chain/: client.rs  contract.rs  mod.rs  provider.rs  stream.rs  types.rs
service/src/chain/traits/: string.rs
service/src/chain/utils/: get_all_chains.rs  get_block.rs  get_lottery_provider.rs  mod.rs
service/src/chain_state/: mod.rs  store.rs  types.rs
service/src/common/: atomic.rs  macros.rs  mod.rs  shutdown.rs  types.rs
service/src/config/: extra.rs  mod.rs  service.rs
service/src/draw/: mod.rs  store.rs  types.rs
service/src/event/: mod.rs
service/src/lottery/: mod.rs  store.rs  types.rs  utils.rs
service/src/message_broker/: mod.rs
service/src/prize/: mod.rs  store.rs  types.rs
service/src/store/: mod.rs  service.rs
service/src/telemetry/: mod.rs  utils.rs
service/src/telemetry/logs/: mod.rs
service/src/telemetry/metrics/: mod.rs
service/src/telemetry/traces/: mod.rs
service/src/ticket/: mod.rs  store.rs  types.rs
service/src/transaction/: mod.rs  service.rs  store.rs  types.rs
service/src/twitter/: service.rs
src/: cli.rs  main.rs
