[package]
name = "indexer"
version = "0.17.2"
edition = "2021"

[package.metadata.workspaces]
independent = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib = { path = "../lib" }
entity = { path = "../entity" }
service = { path = "../service" }
contract = { path = "../contract" }
hex = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
error-stack = { workspace = true }
futures-util = { workspace = true }
serenity = { workspace = true }
ethers = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
pin-project = { workspace = true }
sqlx = { workspace = true }
rust_decimal = { workspace = true }
